fix overflow issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,17 +1,29 @@
+* {
+  box-sizing: border-box;
+  outline: none;
+}
+body,
 html {
   height: 100%;
   width: 100%;
-}
-body {
-  background: linear-gradient(-45deg, #138383 0%, #380036 74%);
-  max-height: 100vh;
-  max-width: 100vw;
   margin: 0;
-  padding: 0;
-  background-size: 400% 400%;
-  animation: gradient 30s ease infinite;
-  overflow: overlay;
+  background: linear-gradient(
+    135deg,
+    rgba(9, 32, 63, 1) 0%,
+    rgba(83, 120, 149, 1) 100%
+  );
 }
+//card
+.card {
+  border-radius: 5px;
+  padding: 1rem;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.card:hover {
+  border: 2px solid rgba(255, 255, 255, 0.4);
+}
+// scrollbar
 
 body::-webkit-scrollbar {
   width: 8px; /* width of the entire scrollbar */
@@ -51,3 +63,13 @@ ul::-webkit-scrollbar-thumb {
     background-position: 0% 50%;
   }
 }
+// background: linear-gradient(
+//   135deg,
+//   rgba(9, 32, 63, 1) 0%,
+//   rgba(83, 120, 149, 1) 100%
+// );
+// padding: 2rem;
+// width: 100vh;
+// height: 100vh;
+// background-size: 100% 100%;
+// overflow: overlay;
