--- a/src/components/chart/Chart.scss
+++ b/src/components/chart/Chart.scss
@@ -1,11 +1,11 @@
-.chart-container {
-  height: 100%;
-  width: 100%;
-  max-height: 75vh;
-  max-width: 100vw;
-}
+// .chart-container {
+//   height: 100%;
+//   width: 100%;
+// }
 .chart-filters {
-  position: relative;
+  position: absolute;
+  // top: 0;
+  // right: 0;
   display: flex;
   list-style: none;
   z-index: 100;
