--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,8 @@
+.header-container {
+  height: 100%;
+  width: 100%;
+}
+
 .header-text {
   font-weight: 300;
   display: flex;
