--- a/src/components/overview/Overview.scss
+++ b/src/components/overview/Overview.scss
@@ -1,6 +1,5 @@
 .overview {
   display: grid;
-  margin: 1rem;
   height: 100%;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
